[gd_scene load_steps=14 format=3 uid="uid://c3pjni1tj035t"]

[ext_resource type="Script" path="res://scripts/growing_trellis.gd" id="1_bhemf"]
[ext_resource type="Texture2D" uid="uid://bosufh4oj2kqc" path="res://assets/trellis.png" id="2_uelkl"]
[ext_resource type="Texture2D" uid="uid://m76dkl7vmfb2" path="res://assets/grape_and_apple.png" id="3_yixfl"]
[ext_resource type="AudioStream" uid="uid://dh4ukc82nuisl" path="res://assets/place-100513.mp3" id="4_k0h3n"]
[ext_resource type="AudioStream" uid="uid://c4g281x04t5ao" path="res://assets/rustling-grass-2-101283.mp3" id="5_kypt2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wmox7"]
atlas = ExtResource("2_uelkl")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0c5vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmox7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xtm4k"]
atlas = ExtResource("3_yixfl")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6tq0"]
atlas = ExtResource("3_yixfl")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er8nq"]
atlas = ExtResource("3_yixfl")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydxe"]
atlas = ExtResource("2_uelkl")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_geg07"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtm4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6tq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er8nq")
}],
"loop": true,
"name": &"grape_growing",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydxe")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8xdq"]
size = Vector2(16, 16)

[node name="GrowingTrellis" type="StaticBody2D"]
script = ExtResource("1_bhemf")

[node name="Land" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0c5vg")

[node name="Plant" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_geg07")
animation = &"none"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_b8xdq")

[node name="CropTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k0h3n")
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kypt2")
bus = &"SFX"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="CropTimer" to="." method="_on_crop_timer_timeout"]
